--- a/src/assets/css/blogcard.css
+++ b/src/assets/css/blogcard.css
@@ -1,10 +1,11 @@
 .blogCard {
     padding-bottom: 10px;
     margin: 30px 0;
+    border-bottom: 4px solid white;
 }
 
 .blogCard:hover {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 25px 50px 10px, rgba(0, 0, 0, 0.3) 0px 15px 30px 15px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: 5px 5px 10px gray;
     border-bottom: 4px solid #2f2f7c;
     cursor: pointer;
     transform: scale(1.03);
@@ -63,6 +64,7 @@
 
 .blogCard .postDetails small {
     opacity: 0.5;
+    color: #313D3F;
 }
 
 .blogCard .blogCard-body {
@@ -92,6 +94,7 @@
 .blogCard .divider {
     font-size: 40px;
     opacity: 0.1;
+    color: #313D3F;
 }
 
 .blogCard .blogCard-footer {
