--- a/src/assets/css/blogcard.css
+++ b/src/assets/css/blogcard.css
@@ -1,7 +1,7 @@
 .blogCard {
     padding-bottom: 10px;
     margin: 30px 0;
-    border-bottom: 4px solid white;
+    border-bottom: 4px solid transparent;
 }
 
 .blogCard:hover {
@@ -105,4 +105,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+@media screen and (max-width:425px) {
+    .blogCard {
+        padding-bottom: 10px;
+        margin: 13px 0;
+        border-bottom: 4px solid transparent;
+    }
 }
