--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -20,7 +20,7 @@ ul {
 }
 
 .wrapper {
-    color: white !important;
+    /* color: white !important; */
     background: white;
     box-shadow: 0px 1px 15px 0px black;
     position: fixed;
@@ -180,18 +180,22 @@ nav .content .links {
 
 .content .links ul {
     position: absolute;
-    background: #fff;
+    background: #2f2f7c;
     margin-bottom: 0px !important;
-    top: 80px;
+    /* top: 80px;
     z-index: -1;
     opacity: 0;
-    visibility: hidden;
+    visibility: hidden; */
+}
+
+.content .links ul li a {
+    color: white;
 }
 
 .content .links li:hover>ul {
     top: 60px;
-    opacity: 1;
-    visibility: visible;
+    /* opacity: 1;
+    visibility: visible; */
     padding: 0px;
     transition: all 0.3s ease;
 }
@@ -216,6 +220,29 @@ nav .content .links {
 
 .content .links ul li:hover ul {
     top: 10px;
+}
+
+.links ul {
+    width: 100%;
+}
+
+ul li {
+    display: block;
+    position: relative;
+}
+
+li ul {
+    display: none;
+}
+
+ul ul ul {
+    top: 0%;
+    left: 100%;
+}
+
+li:hover>ul {
+    display: block;
+    position: absolute;
 }
 
 
@@ -287,8 +314,8 @@ nav .content .links {
         position: static;
         opacity: 1;
         visibility: visible;
-        background: none;
-        max-height: 0px;
+        /* max-height: 0px; */
+        color: #ffa500;
         overflow: hidden;
     }
     .content .links #show-features:checked~ul,
