changes in navbar and created contact us page

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -216,6 +216,15 @@ nav .content .links {
 
 .content .links ul li {
     position: relative;
+    border-left: 5px solid transparent;
+}
+
+.content .links ul li:hover {
+    border-left: 5px solid #ffa500;
+}
+
+.content .links ul li:hover>a {
+    color: #ffa500;
 }
 
 .content .links ul li:hover ul {
