--- a/src/assets/css/gdpi/herobanner.css
+++ b/src/assets/css/gdpi/herobanner.css
@@ -5,6 +5,13 @@
     z-index: -2;
 }
 
+.gdpi .hero-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
 .gdpi .hero-banner::before {
     content: "";
     position: absolute;
